src/parser/tests/snapshots/rusty__parser__tests__expressions_parser_tests__multiplication_expressions_parse.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: statement
---
BinaryExpression {
    operator: Division(
        None,
    ),
    left: BinaryExpression {
        operator: Multiplication,
        left: LiteralInteger {
            value: 1,
        },
        right: LiteralInteger {
            value: 2,
        },
    },
    right: LiteralInteger {
        value: 7,
    },
}
