src/parser/tests/snapshots/rusty__parser__tests__expressions_parser_tests__or_compare_expressions_priority_test.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: statement
---
BinaryExpression {
    operator: Or,
    left: BinaryExpression {
        operator: Greater,
        left: Reference {
            name: "x",
        },
        right: LiteralInteger {
            value: 1,
        },
    },
    right: Reference {
        name: "b1",
    },
}
