src/parser/tests/snapshots/rusty__parser__tests__expressions_parser_tests__parenthesized_term_ast_test.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: statement
---
BinaryExpression {
    operator: Multiplication,
    left: ParenExpression {
        expression: BinaryExpression {
            operator: Plus,
            left: LiteralInteger {
                value: 1,
            },
            right: LiteralInteger {
                value: 2,
            },
        },
    },
    right: ParenExpression {
        expression: BinaryExpression {
            operator: Plus,
            left: LiteralInteger {
                value: 3,
            },
            right: LiteralInteger {
                value: 4,
            },
        },
    },
}
