src/parser/tests/snapshots/rusty__parser__tests__expressions_parser_tests__pointer_address_test.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: statement
---
ReferenceExpr {
    kind: Address,
    base: Some(
        ReferenceExpr {
            kind: Member(
                Identifier {
                    name: "x",
                },
            ),
            base: None,
        },
    ),
}
