src/parser/tests/snapshots/rusty__parser__tests__expressions_parser_tests__pointer_dereference_test.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: statement
---
ReferenceExpr {
    kind: Deref,
    base: Some(
        ReferenceExpr {
            kind: Member(
                Reference {
                    name: "x",
                },
            ),
            base: None,
        },
    ),
}
