src/parser/tests/snapshots/rusty__parser__tests__expressions_parser_tests__pointer_dereference_test_nested.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: statement
---
ReferenceExpr {
    kind: Deref,
    base: Some(
        ReferenceExpr {
            kind: Deref,
            base: Some(
                ReferenceExpr {
                    kind: Index(
                        LiteralInteger {
                            value: 2,
                        },
                    ),
                    base: Some(
                        ReferenceExpr {
                            kind: Deref,
                            base: Some(
                                ReferenceExpr {
                                    kind: Index(
                                        LiteralInteger {
                                            value: 1,
                                        },
                                    ),
                                    base: Some(
                                        ReferenceExpr {
                                            kind: Index(
                                                LiteralInteger {
                                                    value: 0,
                                                },
                                            ),
                                            base: Some(
                                                ReferenceExpr {
                                                    kind: Deref,
                                                    base: Some(
                                                        ReferenceExpr {
                                                            kind: Deref,
                                                            base: Some(
                                                                ReferenceExpr {
                                                                    kind: Member(
                                                                        Reference {
                                                                            name: "x",
                                                                        },
                                                                    ),
                                                                    base: None,
                                                                },
                                                            ),
                                                        },
                                                    ),
                                                },
                                            ),
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
        },
    ),
}
