src/parser/tests/snapshots/rusty__parser__tests__expressions_parser_tests__qualified_reference_statement_parsed.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: "&prg.statements[0]"
---
ReferenceExpr {
    kind: Member(
        Identifier {
            name: "x",
        },
    ),
    base: Some(
        ReferenceExpr {
            kind: Member(
                Identifier {
                    name: "a",
                },
            ),
            base: None,
        },
    ),
}
