src/parser/tests/snapshots/rusty__parser__tests__expressions_parser_tests__signed_literal_minus_test.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: statement
---
LiteralInteger {
    value: -1,
}
