src/parser/tests/snapshots/rusty__parser__tests__expressions_parser_tests__single_statement_parsed.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: "&prg.statements[0]"
---
Reference {
    name: "x",
}
